--- a/build.yaml
+++ b/build.yaml
@@ -23,7 +23,9 @@ targets:
             dialect: sqlite
             options:
               version: "3.38"
-              modules: [fts5]
+              modules:
+                - json1
+                - fts5
 
           # This allows us to share a drift database across isolates (or different tabs on the web)
           generate_connect_constructor: true
