--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,15 @@ dependencies:
   path_provider: ^2.0.0
   path: ^1.8.2
   sqlite3: ^1.7.0
+  drift_dev: ^2.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  drift_dev: ^2.1.0
   build_runner: ^2.2.0
 
 flutter:
+
+flutter_scripts:
+  schema: flutter pub run drift_dev schema dump lib/src/database/database.dart drift_schemas/
