--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   pocketbase_drift:
     path: ..
+  simple_html_css: ^4.0.0
 
 dev_dependencies:
   flutter_test:
