--- a/build.yaml
+++ b/build.yaml
@@ -33,6 +33,7 @@ targets:
           apply_converters_on_variables: true
           generate_values_in_copy_with: true
           scoped_dart_components: true
+          case_from_dart_to_sql: preserve
 
       # # Configuring this builder isn't required for most apps. In our case, we
       # # want to compile the web worker in `web/worker.dart` to JS and we use the
