--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A pocketbase client backed by drift database.\
 version: 0.1.0
 
 environment:
-  sdk: ">=2.19.0-238.0.dev <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
