--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   pocketbase_drift:
     path: ..
   simple_html_css: ^4.0.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
