--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   sqlite3: ^2.0.0
   drift_dev: ^2.1.0
   shortid: ^0.1.2
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
